--- a/res/menu/actionbar.xml
+++ b/res/menu/actionbar.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/menu_spinner"
+          android:showAsAction="ifRoom|collapseActionView"
+          android:actionViewClass="android.widget.Spinner" />
     <item android:id="@+id/menu_listview"
           android:title="@string/Listenansicht"
-          android:showAsAction="ifRoom|withText" />
+          android:icon="@drawable/list"
+          android:showAsAction="ifRoom" />
     <item android:id="@+id/menu_settings"
           android:title="@string/Konfiguration"
           android:showAsAction="withText" />
